diesel_compile_tests/tests/fail/derive/bad_not_sized.stderr
error: expected `,`
 --> tests/fail/derive/bad_not_sized.rs:5:20
  |
5 | #[diesel(not_sized = true)]
  |                    ^
